kube-prometheus/overlays/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: http
    host: grafana.homelab.com
  tls:
  - hosts:
    - grafana.example.com
    secretName: grafana.homelab.com
